adding new recipes and photos + fixing css

--- a/my-react-app/src/Layout/MainLayout/MainLayout.css
+++ b/my-react-app/src/Layout/MainLayout/MainLayout.css
@@ -27,7 +27,7 @@
   
   /* Footer */
   .MainLayout footer {
-    background-color: #f06292;
+    background-color: #a95b99;
     padding: 1rem;
     color: #fff;
     text-align: center;
