--- a/my-react-app/src/Pages/Login/LoginForm.css
+++ b/my-react-app/src/Pages/Login/LoginForm.css
@@ -8,7 +8,6 @@
     background-color: #222;  
     border: 1px solid #444;
   
-    /* Text color for labels/headers */
     color: #fff;
   }
   
@@ -27,7 +26,6 @@
   .form-group label {
     margin-bottom: 5px;
     font-weight: bold;
-    /* Slightly lighter label color */
     color: #ccc;
   }
   
@@ -35,13 +33,12 @@
     height: 36px;
     padding: 5px 8px;
     
-    /* Darker input with lighter border */
     background-color: #333;  
     border: 1px solid #555;
     border-radius: 4px;
     
     outline: none;
-    color: #fff;       /* Input text color */
+    color: #fff;
     font-size: 14px;
   }
   
@@ -57,7 +54,6 @@
     width: 100%;
     height: 40px;
     
-    /* Subtle button background, text in white */
     background-color: #5cb85c;
     color: #fff;
   
