--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -1,40 +1,49 @@
+html,
 body {
-  min-height: 100vh;
-  padding-bottom: 50px;
-  background-color: #242424;
-  color: #ffffff; /* Optional for readability */
+  margin: 0;
+  padding: 0;
+  background-color: #fff;
+  color: #333;
+  font-family: Arial, sans-serif;
 }
+
+body {
+}
+
 .card {
   opacity: 0.9;
 }
 
-/* Navigation bar definitions */
- .navbar{
+.navbar {
   padding: 0;
- }
- .navbar .navbar-nav .nav-link{
-  padding: 1em;
- }
- .navbar .navbar-nav .nav-item{
-  position: relative;
- }
+}
 
- .navbar .navbar-nav .nav-item::after{
+.navbar .navbar-nav .nav-link {
+  padding: 1em;
+}
+
+.navbar .navbar-nav .nav-item {
+  position: relative;
+}
+
+.navbar .navbar-nav .nav-item::after {
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
-  content: '';
-  background-color:rgb(169, 77, 123) ;
+  content: "";
+  background-color: rgb(169, 77, 123);
   width: 0;
   margin: 0 auto;
   height: 4px;
-  transition: all .5s;
- }
- .navbar .navbar-nav .nav-item:hover::after{
+  transition: all 0.5s;
+}
+
+.navbar .navbar-nav .nav-item:hover::after {
   width: 100%;
- }
- .navbar-dark .navbar-nav .nav-link {
+}
+
+.navbar-dark .navbar-nav .nav-link {
   color: rgb(25, 24, 24);
 }
 
@@ -42,50 +51,47 @@ body {
   color: rgb(25, 24, 24);
 }
 
- @media screen and (min-width: 992px){
-  .navbar{
-  padding: 0;
- }
- .navbar .navbar-nav .nav-link{
-  padding: 1em 0;
- }
- .navbar .navbar-nav .nav-item{
-  margin: 0 1em;
- }
- }
-
-  /* Hotel custom color */
- .btn-hotel{
-  background-color: rgb(169, 77, 123);
-  color: #fff;
+@media screen and (min-width: 992px) {
+  .navbar {
+    padding: 0;
   }
-  .btn-hotel:hover{
-  background-color: rgb(137, 127, 132);
-  color: #fff;
-  transition: 0.7s;
-  outline-color: transparent;
-  outline-style:solid;
-
+  .navbar .navbar-nav .nav-link {
+    padding: 1em 0;
   }
-
-  .hotel-color{
-    color: rgb(169, 77, 123);
-    font-family: 'Arial', sans-serif; 
-
+  .navbar .navbar-nav .nav-item {
+    margin: 0 1em;
   }
-  .room-price {
-    color: #975a04; 
-    font-family: 'Arial', sans-serif; 
-    font-size: 1.1rem; 
-    font-weight: bold; 
 }
 
-.vertical-rule{
-    border-left: '0.5px solid black';
-    height: '100vh'
-  }
+.btn-hotel {
+  background-color: rgb(169, 77, 123);
+  color: #fff;
+  transition: 0.7s;
+}
 
+.btn-hotel:hover {
+  background-color: rgb(137, 127, 132);
+  color: #fff;
+  outline-color: transparent;
+  outline-style: solid;
+}
 
+.hotel-color {
+  color: rgb(169, 77, 123);
+  font-family: "Arial", sans-serif;
+}
+
+.room-price {
+  color: #975a04;
+  font-family: "Arial", sans-serif;
+  font-size: 1.1rem;
+  font-weight: bold;
+}
+
+.vertical-rule {
+  border-left: 0.5px solid black;
+  height: 100vh;
+}
 
 .parallax {
   background-image: url("./assets/images/parrall.jpg");
@@ -94,6 +100,9 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   height: 50vh;
+  margin-top: 50px;
+  color: white;
+  text-shadow: 2px 2px black;
 }
 
 .header {
@@ -103,107 +112,18 @@ body {
   background-image: url("./assets/images/services4.jpg");
   background-position: center center;
 }
+
 .header-title {
   color: #fff;
   font-size: 4rem;
   align-content: center;
 }
 
-.parallax {
-  margin-top: 50px;
-  color: white;
-  text-shadow: 2px 2px black;
-}
-
-.animated {
-  animation-duration: 1s;
-}
-
-.animated-texts h1 {
-  animation: fadeInDown 1s ease-in-out;
-}
-
-.animated-texts p, h1, h2 {
-  animation: fadeInUp 1s ease-in-out;
-}
-
-@keyframes bounceIn {
-  from, 20%, 40%, 60%, 80%, to {
-    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
-    transform: translate3d(0,0,0);
-  }
-
-  40%, 60% {
-    animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-    transform: translate3d(0, -30px, 0);
-  }
-
-  70% {
-    animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-    transform: translate3d(0, -15px, 0);
-  }
-
-  90% {
-    transform: translate3d(0,-4px,0);
-  }
-}
-
-.bounceIn {
-  animation-name: bounceIn;
-}
-
-@keyframes fadeInDown {
-  from {
-    opacity: 0;
-    transform: translate3d(0, -50%, 0);
-  }
-
-  to {
-    opacity: 1;
-    transform: none;
-  }
-}
-
-@keyframes fadeInUp {
-  from {
-    opacity: 0;
-    transform: translate3d(0, 50%, 0);
-  }
-
-  to {
-    opacity: 1;
-    transform: none;
-  }
-}
-/* Header overlay */
-  .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-  }
-  .overlay-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-     transform: translate(-50%, -50%);
-    color: #fff;
-    justify-content: flex-start;
-  }
-
-/* The header banner */
-.header-banner {
-  background-image:  url("./assets/images/services-1.jpg");
-   background-size: cover;
-  background-position: center;
-   position: relative;
-  height: 80vh;
- }
-
 .header-banner {
   position: relative;
+  background-image: url("./assets/images/services-1.jpg");
+  background-size: cover;
+  background-position: center;
   height: 500px;
 }
 
@@ -219,7 +139,39 @@ body {
   }
 }
 
- .footer {
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.overlay-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  justify-content: flex-start;
+}
+
+.animated {
+  animation-duration: 1s;
+}
+
+.animated-texts h1 {
+  animation: fadeInDown 1s ease-in-out;
+}
+
+.animated-texts p,
+h1,
+h2 {
+  animation: fadeInUp 1s ease-in-out;
+}
+
+.footer {
   position: fixed;
   left: 0;
   bottom: 0;
@@ -227,7 +179,6 @@ body {
   background-color: #f5f5f5;
   height: 60px;
   text-align: center;
+  line-height: 60px;
+  color: #333;
 }
-
-
-
